[package]
name = "iron_boy"
version = "0.1.0"
authors = ["Nicolás Siplis <nicolas.siplis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "*", features = ["stable"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "0.4.34"
winit = "0.28.2"
winit_input_helper = "0.14.0"
pixels = "0.11.0"
clap = { version = "4.0.18", features = ["derive"] }
pausable_clock = { git = "https://github.com/nicolas-siplis/pausable_clock.git" }
serde = { version = "1.0.147", features = ["derive", "rc", "std"] }
serde_json = { version = "1.0.96", default-features = false, features = ["alloc"] }
bincode = "1.3.3"
wasm-timer = "0.2.5"
rand = { version = "*" }
getrandom = { version = "*", features = ["js"] }
coreaudio-sys = "0.2.15"
cpal = { git = "https://github.com/DouglasDwyer/cpal.git", features = ["wasm-bindgen"] }
wasm-rs-async-executor = "0.9.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.61", features = [ "VisibilityState", "Window", "Navigator", "console", "Document", "HtmlAnchorElement","HtmlCanvasElement", "HtmlInputElement", "Event", "EventTarget", "FileList", "File", "Blob", "ReadableStream", "ReadableStreamDefaultReader", "ReadableStreamReadResult" ] }
dominator = "0.5.32"
instant = "0.1.12"

[dev-dependencies]
image = "0.24.4"

[profile.release]
debug = true

incremental = true
opt-level = 3

[profile.dev]
incremental = true
opt-level = 0
